[package]
name = "du-dust"
description = "A more intuitive version of du"
version = "0.8.1"
authors = ["bootandy <bootandy@gmail.com>", "nebkor <code@ardent.nebcorp.com>"]
edition = "2018"
readme = "README.md"

documentation = "https://github.com/bootandy/dust"
homepage = "https://github.com/bootandy/dust"
repository = "https://github.com/bootandy/dust"

keywords = ["du", "command-line", "disk", "disk-usage"]
categories = ["command-line-utilities"]
license = "Apache-2.0"

[badges]
travis-ci = { repository = "https://travis-ci.org/bootandy/dust" }

[[bin]]
name = "dust"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
ansi_term = "0.12"
clap = { version = "=3", features = ["cargo"] }
lscolors = "0.7"
terminal_size = "0.1"
unicode-width = "0.1"
rayon = "1"
thousands = "0.2"
stfu8 = "0.2"
regex = "1"

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1"

[dev-dependencies]
assert_cmd = "1"
tempfile = "=3"

[[test]]
name = "integration"
path = "tests/tests.rs"

[package.metadata.deb]
section = "utils"
assets = [
  [
    "target/release/dust",
    "usr/bin/",
    "755",
  ],
  [
    "LICENSE",
    "usr/share/doc/du-dust/",
    "644",
  ],
  [
    "README.md",
    "usr/share/doc/du-dust/README",
    "644",
  ],
]
extended-description = """\
Dust is meant to give you an instant overview of which directories are using
disk space without requiring sort or head. Dust will print a maximum of one
'Did not have permissions message'.
"""
