[package]
name = "du-dust"
description = "A more intuitive version of du"
version = "1.2.3"
authors = ["bootandy <bootandy@gmail.com>", "nebkor <code@ardent.nebcorp.com>"]
edition = "2024"
readme = "README.md"

documentation = "https://github.com/bootandy/dust"
homepage = "https://github.com/bootandy/dust"
repository = "https://github.com/bootandy/dust"

keywords = ["du", "command-line", "disk", "disk-usage"]
categories = ["command-line-utilities"]
license = "Apache-2.0"

[badges]
travis-ci = { repository = "https://travis-ci.org/bootandy/dust" }

[[bin]]
name = "dust"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
ansi_term = "0.12"
clap = { version = "4", features = ["derive"] }
lscolors = "0.21"
terminal_size = "0.4"
unicode-width = "0.2"
rayon = "1"
thousands = "0.2"
stfu8 = "0.2"
regex = "1"
config-file = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37"
ctrlc = "3"
chrono = "0.4"

[target.'cfg(not(target_has_atomic = "64"))'.dependencies]
portable-atomic = "1.4"

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1"
filesize = "0.2.0"

[dev-dependencies]
assert_cmd = "2"
tempfile = "=3"

[build-dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
clap_mangen = "0.2"

[[test]]
name = "integration"
path = "tests/tests.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/dust-v{ version }-{ target }{ archive-suffix }"
bin-dir = "dust-v{ version }-{ target }/{ bin }{ binary-ext }"

[package.metadata.deb]
section = "utils"
assets = [
  [
    "target/release/dust",
    "usr/bin/",
    "755",
  ],
  [
    "LICENSE",
    "usr/share/doc/du-dust/",
    "644",
  ],
  [
    "README.md",
    "usr/share/doc/du-dust/README",
    "644",
  ],
  [
    "man-page/dust.1",
    "usr/share/man/man1/dust.1",
    "644",
  ],
  [
    "completions/dust.bash",
    "usr/share/bash-completion/completions/dust",
    "644",
  ],
]
extended-description = """\
Dust is meant to give you an instant overview of which directories are using
disk space without requiring sort or head. Dust will print a maximum of one
'Did not have permissions message'.
"""
